--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="col-md-6 mb-4">
-            <a href="projects/skysales.html">
+            <a href="projects/fossilfuels.html">
               <div class="hover hover-2 text-white rounded"><img src="Assets/images/fossilfuels/overview.png" alt="overview picture the game named a future without fossil fuels">
               <div class="hover-overlay"></div>
               <div class="hover-2-content px-5 py-4">
